# rspgen

./: CMakeLists.txt  ChangeLog  SConscript  azure-pipelines.yml  rspgenLib.py
cmt/: requirements
data/: LatResponseTemplate  PHA1.pha  StdEnergyBin.fits  ft2tiny.fits  rspgen_energy_bins.fits
data/outref/: PHA1.pha  test_response1.rsp  test_response2.rsp  test_response3.rsp  test_response4.rsp  test_response5.rsp  test_response6.rsp  test_response7.rsp  test_response8.rsp  test_response_p7.rsp
doc/: release.notes
pfiles/: gtrspgen.par  rspgen.par
rspgen/: CircularWindow.h  GrbResponse.h  Gti.h  IResponse.h  IWindow.h  PointResponse.h  SpaceCraftCalculator.h
src/: CircularWindow.cxx  GrbResponse.cxx  Gti.cxx  IResponse.cxx  IWindow.cxx  PointResponse.cxx  RspGenApp.cxx  RspGenApp.h  SpaceCraftCalculator.cxx  mainpage.h
src/rspgen/: rspgen.cxx
src/test/: test_rspgen.cxx
